230_aks_ingress_apim/kubernetes/1-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  namespace: webapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      containers:
      - name: webapi
        image: ghcr.io/houssemdellai/containerapps-album-backend:v1
        ports:
        - containerPort: 3500
---
apiVersion: v1
kind: Service
metadata:
  name: webapi
  namespace: webapi
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3500
  selector:
    app: webapi
