230_aks_ingress_apim/kubernetes/3-ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapi
  namespace: webapi
spec:
  ingressClassName: nginx-internal-static
  rules:
  - http:
      paths:
      - backend:
          service:
            name: webapi
            port:
              number: 80
        path: /
        pathType: Prefix
